GH-3115: Add observationConvention Setter for RabbitStreamTemplate
Fixes: https://github.com/spring-projects/spring-amqp/issues/3115

* Update ObservationConvention setter javadoc

Signed-off-by: Tran Ngoc Nhan <ngocnhan.tran1996@gmail.com>

(cherry picked from commit e97976c5188323d1ea67a2d20186999577b51a49)